--- a/src/components/teacher-login/teacher-login.css
+++ b/src/components/teacher-login/teacher-login.css
@@ -46,6 +46,8 @@ button{
     padding: 15px 10px;
     border-radius: 6px;
     cursor: pointer;
+    color: white;
+    font-weight: bold;
     background-color: blue;
 }
 a{
